Fix alignment

--- a/assets/_scss/elements/_inputs.scss
+++ b/assets/_scss/elements/_inputs.scss
@@ -47,7 +47,7 @@ select  {
     top: .5em;
   }
   position: relative;
-  right: 1.5rem;
+  right: 1.9rem;
   
   input {
     border: 3px solid $color-secondary-dark;
